Title bar and color pellete change

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,7 +28,7 @@ button {
 }
 
 .app-contents {
-    background-color: hsl(220, 13%, 18%);
+    background-color: #192329 ;
     min-height: 100vh;
     height: max-content;
     width: 100vw;
