--- a/client/src/components/SignUp.module.css
+++ b/client/src/components/SignUp.module.css
@@ -4,21 +4,20 @@
   box-sizing: border-box;
 }
 :root {
-  --main-color: #4ad0cc;
-  --secondary-color: #bbc3c9;
+  --main-color: #dea114;
+  --secondary-color: black;
   --box-shadow: 0 0 7px 0 var(--secondary-color);
-  --main-color-hover: #52b1ae;
+  --main-color-hover: #dea114;
 }
 body {
-  font-size: 14px;
-  color: #303030;
+  font-size: 25px;
   overflow-x: hidden;
-  background: #f8f9fa;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
   text-decoration: none;
+  font-weight: bold;
   color: var(--main-color);
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -32,9 +31,7 @@ a:hover {
 }
 
 .formLogin {
-  background: hsl(0, 0%, 4%);
-  box-shadow: var(--box-shadow);
-  border: 1px solid var(--secondary-color);
+  background: #318080;
   padding: 25px;
   border-radius: 11px;
   min-width: 500px;
@@ -49,8 +46,11 @@ a:hover {
 
 .formLogin > h2 {
   margin-bottom: 28px;
-  color: var(--main-color);
+  color: #dea114;
   text-align: center;
+}
+h2{
+  color: #dea114;
 }
 
 .formLogin > div {
@@ -80,7 +80,7 @@ a:hover {
 .formLogin input[type="text"]:focus,
 .formLogin input[type="email"]:focus,
 .formLogin input[type="password"]:focus {
-  border: 1px solid var(--main-color);
+  border: 3px solid var(--main-color);
 }
 
 .unCompleted > input {
@@ -114,29 +114,6 @@ a:hover {
   right: 10px;
 }
 
-.formLogin input[type="checkbox"] {
-  position: relative;
-  margin-right: 10px;
-  width: 15px;
-  height: 15px;
-  border: 1px solid var(--main-color);
-  appearance: none;
-  border-radius: 5px;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-}
-.formLogin input[type="checkbox"]:checked {
-  background-color: var(--main-color-hover);
-  background-image: url("../img/tik.svg");
-}
-
-.formLogin input[type="checkbox"]:focus {
-  outline: none;
-  border: 2px solid var(--main-color-hover);
-}
 
 .formLogin > div > div img {
   position: absolute;
@@ -174,14 +151,15 @@ a:hover {
 .formLogin button[type="submit"] {
   display: block;
   text-align: center;
-  width: 100%;
+  font-weight: bold;
+  width: 50%;
   border-radius: 25px;
   outline: 0;
   border: none;
-  color: #fff;
+  color: black;
   padding: 10px;
-  margin: 15px 0;
-  background: var(--main-color);
+  margin: 15px auto;
+  background: #dea114;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -191,7 +169,7 @@ a:hover {
 }
 
 .formLogin button[type="submit"]:hover {
-  background: var(--main-color-hover);
+  background: #cf9409;
   cursor: pointer;
 }
 
