--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,8 +22,6 @@ a {
     color: #559c95; 
 }
 
-
-
 .button-back {
     margin-bottom: 2rem;
 
@@ -39,7 +37,6 @@ a {
     width: auto; 
    
     @media screen and (max-width: 768px) {
-       
         font-size: 1rem;
         padding: 0.3rem 0.8rem;
         max-width: 100%; 
@@ -50,16 +47,18 @@ a {
 
 
 .button {
-    margin: 0 auto; 
     display: block; 
     cursor: pointer;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     border: none;
+    border-radius: 25px;
     background-color: #559c95;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-top: 1rem;
-    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
     align-self: center;
 }
 
@@ -77,10 +76,6 @@ a {
     max-width: 100%; 
     height: auto; 
     border-radius: 1rem;
-}
-
-button {
-    cursor: pointer;
 }
 
 .app-contents {
@@ -103,27 +98,6 @@ button {
     grid-template-areas:
         "button-back . button-new"
         "contents contents contents";
-}
-
-.button
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: 25px;
-    height: 3rem;
-    width: 20rem;
-    align-self: center;
-}
-
-.button-back,
-.button-new {
-    width: 8rem;
-}
-
-.button-back {
-    grid-area: button-back;
 }
 
 .button-new {
@@ -202,14 +176,16 @@ button {
 .form-container {
     display: flex;
     flex-direction: column;
-    width: 40rem;
     font-size: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     .label {
-        margin-bottom: 0.8rem;
+        margin-bottom: 0.5rem;
         align-self: flex-start;
     }
 
     .input {
+        width: 40vw;
         margin-bottom: 2rem;
         text-align: center;
         align-self: end;
@@ -222,7 +198,7 @@ button {
     top: 4rem;
     left: 0;
     height:fit-content;
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -257,14 +233,14 @@ button {
         .update-container {
           top: 2rem;
           left: 0;
-          width: 100%; /* Make sure the container takes the full width */
+          width: 100vw; 
           padding: 1rem;
-          overflow-x: hidden; /* Hide horizontal overflow */
+          overflow-x: hidden; 
         }
       
         .update-contents {
           padding: 1rem 2rem 2rem;
-          max-width: 100vw; /* Ensure the content doesn't overflow horizontally */
+          max-width: 100vw; 
         }
       
         .close {
@@ -275,28 +251,26 @@ button {
 
 }
 .list-container li:hover {
-    transform: translateY(-5px);
+    transform:scale(1.05);
     transition: transform 0.3s ease;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 0.5rem; 
-    cursor: pointer;
 }
 
 
 .admin-title {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem;
 }
 
 .events-title {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 0.8rem;
 
 }
 .large-font {
     font-size: 4rem;
 }
-
 
 .form-group {
     display: flex; 
@@ -307,7 +281,7 @@ button {
 
 
 .label {
-    flex:2; 
+    flex:1; 
     font-weight: bold;
     margin-right: 1rem; 
     text-align: left;  
@@ -329,5 +303,5 @@ button {
     border-radius: 25px;
     font-size: 1.8rem;
     text-align: center; 
-    width: 100%;
+    width: 100vw;
 }
