--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -641,3 +641,159 @@ table {
       text-align: center;
     }
 
+
+    /* -----------------------------Feedback Analysis---------------------------------*/
+
+/* Feedback Analysis Container */
+.feedback-analysis {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #192329;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  width: 80vw;
+  margin: 4rem auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
+.feedback-analysis h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.feedback-analysis p {
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+/* Add PO or Add PSO Buttons */
+.feedback-analysis .add-button-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.feedback-analysis .add-button-select {
+  font-size: 1.2rem;
+  padding: 0.3rem;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  width: 50%;
+  margin-right: 1rem;
+  background-color: white;
+  color: black;
+}
+
+.feedback-analysis .add-button,
+.feedback-analysis .delete-button {
+  font-size: 1.2rem;
+  padding: 0.3rem 0.7rem;
+  border: none;
+  border-radius: 25px;
+  background: #3a7f78;
+  color: white;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.feedback-analysis .add-button:hover,
+.feedback-analysis .delete-button:hover {
+  background-color: #1a1c1c;
+}
+
+.PO-input {
+  width: 50%;
+  border-radius: 25px;
+  height: 35px;
+  text-align: center;
+  background-color: white;
+}
+
+/* Matrix Tables */
+.feedback-analysis .matrix-table {
+  margin-top: 2rem;
+  width: 100%;
+}
+
+.feedback-analysis .matrix-table th {
+  background-color: #559c95;
+  font-size: 1.5rem;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+.feedback-analysis .matrix-table td {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  font-size: 2rem;
+  text-align: center;
+}
+
+/* Style the select element */
+.matrix-input select {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  margin-right: 8px;
+  appearance: none;
+  background: ghostwhite url('./img/down-arrow.png') no-repeat right center;
+  background-size: 11px;
+  background-position: 34px;
+  cursor: pointer;
+}
+
+/* Style the select element when hovered */
+.matrix-input select:hover {
+  border-color: #007bff;
+}
+
+/* Style the select element when it has focus */
+.matrix-input select:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Media Query for Smaller Screens */
+@media (max-width: 768px) {
+  .feedback-analysis {
+    width: 90vw;
+    padding: 1rem;
+  }
+
+  .feedback-analysis h2 {
+    font-size: 1.8rem;
+  }
+
+  .feedback-analysis p {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .feedback-analysis .add-button,
+  .feedback-analysis .delete-button {
+    font-size: 1rem;
+    padding: 0.3rem 0.5rem;
+    margin-left: 10px;
+  }
+
+  .PO-input {
+    height: 25px;
+    
+  }
+
+  .feedback-analysis .matrix-table td,
+  .feedback-analysis .matrix-table th {
+    padding: 5px;
+    font-size: 1.4rem;
+  }
+}
+
+
+    /* -----------------------------Feedback Analysis---------------------------------*/
