--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -428,7 +428,7 @@ a {
       left: 0;
       width: 100%;
       height: calc(100vh - 60px);
-      background-color: white;
+      background-color: rgb(46, 46, 46);
       border-top: 1px solid black;
       display: none;
     }
