--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -648,13 +648,12 @@ table {
 .feedback-analysis {
   display: flex;
   flex-direction: column;
-  background-color: #323b40;
+  background-color: #f2f4f5;
   border-radius: 0.5rem;
   padding: 2rem;
-  width: 80vw;
+  width: 100vw;
   margin: 4rem auto;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  color: white;
+  color: black;
 }
 
 
@@ -703,28 +702,50 @@ table {
   border-radius: 25px;
   height: 35px;
   text-align: center;
-  background-color: white;
 }
+
+.PO-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.PO-table th,
+.PO-table td {
+  border: 2px solid  #1a1c1c; /* Add borders to table cells */
+  padding: 8px;
+  text-align: center;
+}
+
+.PO-table th {
+  color: #000000;
+  background-color: transparent; /* Add a background color to table header cells */
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 
 /* Matrix Tables */
 .feedback-analysis .matrix-table {
   margin-top: 2rem;
   width: 100%;
+ 
 }
 
 .feedback-analysis .matrix-table th {
-  background-color: #559c95;
+  background-color: transparent;
   font-size: 1.5rem;
-  color: white;
+  color: black;
   padding: 10px;
   text-align: center;
+  border: 2px solid  #1a1c1c;
 }
 
 .feedback-analysis .matrix-table td {
   padding: 10px;
-  border-bottom: 1px solid #ddd;
   font-size: 1.5rem;
   text-align: center;
+  border: 2px solid  #101010;
+  background-color: white;
 }
 
 /* Style the select element */
@@ -788,6 +809,7 @@ h5{
   .feedback-analysis .matrix-table th {
     padding: 5px;
     font-size: 1.4rem;
+   
   }
 }
 
@@ -797,7 +819,7 @@ h5{
     /* -----------------------------REPORT HEADER---------------------------------*/
     .report-header{
       text-align: center;
-      color: white;
+      color: black;
     }
     .report-sub-header {
       display: flex;
