Feedback Analysis Print Fixed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -654,7 +654,7 @@ table {
 .feedback-analysis {
   display: flex;
   flex-direction: column;
-  background-color: #f2f4f5;
+  background-color: white;
   border-radius: 0.5rem;
   padding: 2rem;
   width: 100vw;
