--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -835,3 +835,26 @@ h5{
 
      /* -----------------------------REPORT HEADER---------------------------------*/
 
+     /* -----------------------------RPP---------------------------------*/
+     .rpplabel{
+      font-size: 1.8rem;
+      padding-bottom: 20px;
+      padding-right: 20px;
+      width: 300px;
+      display: inline-block;    
+     }
+
+     
+     .rppinput{
+      padding: 5px;
+      border: none;
+      border-bottom: 1px solid #1a1c1c;
+      margin: 8px 0;
+      width: 40%;
+     
+
+     }
+
+
+
+     /* -----------------------------RPP---------------------------------*/
