--- a/client/src/components/auth/SignUp.module.css
+++ b/client/src/components/auth/SignUp.module.css
@@ -187,3 +187,18 @@ h2{
     padding: 10px 32px;
   }
 }
+.class_dropdown{
+  background: #f5f1f1;
+  border-radius: 25px;
+  outline: 0;
+  border: 1px solid var(--secondary-color);
+  padding: 15px 32px;
+  width: 100%;
+  font-size: 1.5 rem;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
