form61 and icons added

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -840,7 +840,7 @@ h5{
       font-size: 1.8rem;
       padding-bottom: 20px;
       padding-right: 20px;
-      width: 300px;
+      width: fit-content;
       display: inline-block;    
      }
 
@@ -851,9 +851,9 @@ h5{
       border-bottom: 1px solid #1a1c1c;
       margin: 8px 0;
       width: 40%;
-     
-
      }
+
+    
 
 
 
