--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -362,7 +362,7 @@ a {
     height: 60px;
     width: 100%;
     padding: 0.5rem 0rem;
-    background-color: #000000;
+    background-color:#559c95 ;
     color: white;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   }
@@ -809,7 +809,7 @@ h5{
 
   .PO-input {
     height: 25px;
-    
+    width: 140px;
   }
 
   .feedback-analysis .matrix-table td,
@@ -846,15 +846,12 @@ h5{
 
      
      .rppinput{
+      font-size: 1.8rem;
       padding: 5px;
       border: none;
       border-bottom: 1px solid #1a1c1c;
       margin: 8px 0;
       width: 40%;
      }
-
-    
-
-
 
      /* -----------------------------RPP---------------------------------*/
