cal modal removed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -856,3 +856,7 @@ h5{
      }
 
      /* -----------------------------RPP---------------------------------*/
+
+     .cal_venue{
+      font-size: 1.5rem;
+     }
